# ChangeLog for x11-plugins/wmpiki
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmpiki/ChangeLog,v 1.11 2010/09/03 09:24:12 s4t4n Exp $

  03 Sep 2010; Michele Noberasco <s4t4n@gentoo.org> wmpiki-0.2.1.ebuild:
  Honour Gentoo LDFLAGS. Closes bug #335690.

  28 Apr 2009; Michele Noberasco <s4t4n@gentoo.org> wmpiki-0.2.1.ebuild:
  Added some magic sed so that CC is no longer hardcoded, bug #215651.

  28 Nov 2008; Tiago Cunha <tcunha@gentoo.org> wmpiki-0.2.1.ebuild:
  stable sparc, bug 215651

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; wmpiki-0.2.1.ebuild:
  Drop virtual/x11 references.

  21 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  31 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> wmpiki-0.2.1.ebuild:
  Fixed DEPEND for modular X.

  24 Nov 2004; Jason Wever <weeve@gentoo.org> wmpiki-0.2.1.ebuild:
  Added ~sparc keyword.

  02 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  wmpiki-0.2.1.ebuild:
  Masked wmpiki-0.2.1.ebuild stable for ppc

  17 Jul 2004; David Holm <dholm@gentoo.org> wmpiki-0.2.1.ebuild:
  Added to ~ppc.

*wmpiki-0.2.1 (08 Jul 2004)

  13 Jul 2004; Michele Noberasco <s4t4n@gentoo.org> wmpiki-0.2.1.ebuild:
  Stable on x86.

  08 Jul 2004; Michele Noberasco <s4t4n@gentoo.org> wmpiki-0.2.1.ebuild:
  Initial import.