@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/wmpiki
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmpiki/ChangeLog,v 1.11 2010/09/03 09:24:12 s4t4n Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmpiki/ChangeLog,v 1.12 2014/08/10 20:08:32 slyfox Exp $
+
+  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> wmpiki-0.2.1.ebuild:
+  QA: drop trailing '.' from DESCRIPTION
 
   03 Sep 2010; Michele Noberasco <s4t4n@gentoo.org> wmpiki-0.2.1.ebuild:
   Honour Gentoo LDFLAGS. Closes bug #335690.
